--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- intestazione titolo ed immagini inerenti -->
 
     <header>
+
         <div>  
             
             <h1>Il mio Viaggio a Londra</h1>
@@ -153,7 +154,27 @@
            <hr>     
 
         </div>
+
+        <!-- foto per invogliare il cliente -->
+
+        <div>
+            <h3>Le foto</h3>
+
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="immagine_Londra_night">
+            
+            <img src="https://i.ibb.co/r61By50/Cover-Image-Covent-Garden-Market-800x800.png" alt="immagine_Londra_day">
+
+        </div>
+
     </main>
-    <footer></footer>
+
+    <!-- pià di pagina inventato perchè non presente nell' esercizio -->
+
+    <footer>
+
+        <p>Grazie per aver scelto <strong>BooleanTrips</strong></p>
+
+    </footer>
+
 </body>
 </html>
